--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,33 +32,8 @@ services:
     restart: always
     ports:
       - "8080:8080"
-    environment:
-      SPRING_APPLICATION_NAME: ${SPRING_APPLICATION_NAME}
-      SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL}
-      SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
-      SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
-      SPRING_JPA_HIBERNATE_DDL_AUTO: ${SPRING_JPA_HIBERNATE_DDL_AUTO}
-      SPRING_JPA_SHOW_SQL: ${SPRING_JPA_SHOW_SQL}
-      SPRING_JPA_FORMAT_SQL: ${SPRING_JPA_FORMAT_SQL}
-      SPRING_JPA_TIMEZONE: ${SPRING_JPA_TIMEZONE}
-      LOG_SQL_LEVEL: ${LOG_SQL_LEVEL}
-      LOG_SQL_BINDER_LEVEL: ${LOG_SQL_BINDER_LEVEL}
-      LOG_WEBSOCKET_LEVEL: ${LOG_WEBSOCKET_LEVEL}
-      LOG_MESSAGING_LEVEL: ${LOG_MESSAGING_LEVEL}
-      LOG_STREAMPIX_WS_LEVEL: ${LOG_STREAMPIX_WS_LEVEL}
-      BACKEND_URL: ${BACKEND_URL}
-      FRONTEND_URL: ${FRONTEND_URL}
-      WEBSOCKET_URL: ${WEBSOCKET_URL}
-      SERVER_PORT: ${SERVER_PORT}
-      JWT_SECRET: "${JWT_SECRET}"
-      JWT_EXPIRATION: ${JWT_EXPIRATION}
-      MERCADO_PAGO_ACCESS_TOKEN: ${MERCADO_PAGO_ACCESS_TOKEN}
-      MERCADO_PAGO_PUBLIC_KEY: ${MERCADO_PAGO_PUBLIC_KEY}
-      API_KEY_APP: "${API_KEY_APP}"
-      CLOUDINARY_CLOUD_NAME: ${CLOUDINARY_CLOUD_NAME}
-      CLOUDINARY_API_KEY: ${CLOUDINARY_API_KEY}
-      CLOUDINARY_API_SECRET: ${CLOUDINARY_API_SECRET}
-      AI_VOICE_GENERATOR_URL: ${AI_VOICE_GENERATOR_URL}
+    env_file:
+      - "streampix-backend/.env"
     depends_on:
       - db
       - tts
@@ -76,11 +51,8 @@ services:
     restart: always
     ports:
       - "8000:8000"
-    environment:
-      API_KEY_APP: "${API_KEY_APP}"
-      CLOUDINARY_CLOUD_NAME: ${CLOUDINARY_CLOUD_NAME}
-      CLOUDINARY_API_KEY: ${CLOUDINARY_API_KEY}
-      CLOUDINARY_API_SECRET: ${CLOUDINARY_API_SECRET}
+    env_file:
+      - "streampix-tts/.env"
     networks:
       - streampix-net
 
