--- a/streampix-backend/src/main/resources/application.properties
+++ b/streampix-backend/src/main/resources/application.properties
@@ -40,3 +40,6 @@ server.port=${SERVER_PORT:8080}
 # JWT
 jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION:3600000}
+
+
+server.address=0.0.0.0
