--- a/streampix-backend/pom.xml
+++ b/streampix-backend/pom.xml
@@ -39,6 +39,13 @@
 			<artifactId>postgresql</artifactId>
 			<version>42.7.7</version>
 		</dependency>
+		
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-devtools</artifactId>
+    		<optional>true</optional>
+		</dependency>
+
 		<!-- JSON parsing -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
